# BetterGymWue

./: .drone.yml  .gitignore  .travis.yaml  .travis.yml  README.md  deployHeroku.sh  drone.yml  index.html  runmebeforebuild.sh
Backend/: kursAPI.php  mirror.php  sql.sql
action/: BGW Assistant Konzept.xml  package-lock.json  package.json  run.sh  serviceAccount.json  tsconfig.json
backend/: Dockerfile  build.sh  deploy.sh  package-lock.json  package.json  tsconfig.json
backendV3/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backendV3/core/: Cargo.toml  Dockerfile
backendV3/core/src/: fetch_data.rs  guards.rs  handler_stufen.rs  handler_stundenplaene.rs  handler_token.rs  main.rs  sessions.rs  urls.rs
backendV3/core/src/cache/: mod.rs  redis.rs
backendV3/core/src/handlers/: mod.rs  stufen.rs  stundenplaene.rs  token.rs
copymycsstomyhtml/: copymycsstomyhtml.js  package-lock.json  package.json
cors-anywhere/: README.md  package-lock.json  package.json  runproxy.sh
css/: animations.css  elements.css  main.css  min.css  spinner.css  util.css
improvements/: new.js  test.html
js/: actions.js  actions.min.js  api.js  api.min.js  stufe.js  util.js  util.min.js  vars.js
replacer/: package.json  replacer.js
source/: .gitignore  angular.json  karma.conf.js  package-lock.json  package.json  precache-config.js  tsconfig.json  tslint.json
testing/: new.js  old.js  testing.html
v0-x/: README.md  index.html
v1-x/: .angular-cli.json  .gitignore  README.md  angular.json  package-lock.json  package.json  tslint.json
(+274 files in other folders)
