[package]
name = "core"
version = "0.1.0"
authors = ["FoseFx <fosefx@pm.me>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
redis = "0.10.0"
reqwest = "0.9.12"
r2d2 = "*"
r2d2_redis = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
frank_jwt = "3.1.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]